tests/compiler/record_type_3.kk.out
1
========

========
error:
  ┌─ tests/compiler/record_type_3.kk:6:11
  │
6 │ let z = x.a
  │           ^ No such property
  │
  = Available properties:
      x
      y

